--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.constants.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/microservice-provider.constants.ts.j2
@@ -10,25 +10,30 @@ import {
 {% endfor %}
 } from './interfaces'
 {% endif %}
-import { MicroserviceProviderService } from '@webundsoehne/nestjs-util'
 
-
+/**
+ * All available message queues.
+ */
 export enum MessageQueues {
 {% for microservice in microservices %}
   {{ microservice.names.queue }} = '{{ microservice.names.queue }}',
 {% endfor %}
 }
 
+/**
+ * A map for all available patterns for given message queue.
+ */
 export interface MessageQueuePatterns {
 {% for microservice in microservices %}
   [MessageQueues.{{ microservice.names.queue }}]: {{ microservice.names.pattern }}
 {% endfor %}
 }
 
+/**
+ * A map for all requests and responses for a given message queue.
+ */
 export interface MessageQueueMap {
 {% for microservice in microservices %}
   [MessageQueues.{{ microservice.names.queue }}]: {{ microservice.names.interface }}
 {% endfor %}
 }
-
-export type MicroserviceClient = MicroserviceProviderService<MessageQueues, MessageQueuePatterns, MessageQueueMap>
