--- a/packages/nx-nest/src/schematics/application/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/application/files/README.md.j2
@@ -4,11 +4,11 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ---
 
-# {{ packageScope}}
+# @{{ packageScope}}/{{ packageName }}
 
 ## Description
 
-This is a auto-generated custom workspace with [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
+This is a auto-generated custom project with [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx) used to get an API based on [Nest](https://github.com/nestjs/nest) up and running.
 
 <!-- toc -->
 <!-- tocstop -->
