--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -14,13 +14,13 @@ url:
   basePath: http://localhost:3000
   apiPath: ""
 
-{% if server == enum.server.RESTFUL %}
 swagger:
   path: /internal/docs
   title: NestJS Skeleton
   description: API
   useHttps: false
 
+{% if server == enum.server.RESTFUL %}
 cacheLifetime:
   defaultExpiresHeader: false
   defaultLifetime: 0
@@ -65,10 +65,9 @@ database:
 {% endif %}
 {% endif %}
 
-{% if microservice is defined %}
+{# this needs further work #}
+{% if microservice is defined or enum.components.MICROSERVICE_CLIENT in components %}
 messageQueue:
-{% if microservice == enum.microservice.RMQ %}
   urls:
     - amqp://rabbitmq:5672
-{% endif %}
 {% endif %}
