--- a/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/server.module.ts.j2
@@ -34,7 +34,7 @@ import { MessageQueues } from '@{{ packageScope }}/{{ constants.MICROSERVICE_PRO
 
 import * as modules from './modules'
 {% if database is defined and database != enum.database.NONE %}
-import { getDatabaseOptions } from '@util/database'
+import { getDatabaseOptions } from '../util/database'
 {% endif %}
 
 export function createServerModule ({% if database is defined and database != enum.database.NONE %}mock = false{% endif %}): new({% if database is defined and database != enum.database.NONE %}mock : boolean{% endif %}) => NestModule {
