--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -53,7 +53,7 @@ database:
     entity: ./**/*.entity{.ts,.js}
     migration: migrations
     seed: seeds
-{% elif enum.dbAdapters.MONGOOSE == database %}
+{% elif enum.dbAdapters.MONGOOSE in database %}
   host: db-mongodb
   username: user
   password: secret
