--- a/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
@@ -9,6 +9,14 @@
         "pathGroups": [{
           "pattern": "@{{packageScope}}/**",
           "group": "index"
+        },
+        {
+          "pattern": "@webundsoehne/**",
+          "group": "index"
+        },
+        {
+          "pattern": "@webundsoehne-private/**",
+          "group": "index"
         }],
         "pathGroupsExcludedImportTypes": ["builtin"],
         "groups": [
