--- a/packages/nx-nest/src/schematics/application/files/src/command/command.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/command/command.module.ts.j2
@@ -1,11 +1,14 @@
-import { Module } from '@nestjs/common'
-import { CommandModule } from 'nestjs-command'
+import { Module, NestModule } from '@nestjs/common'
+import { CommandModule as BaseCommandModule } from 'nestjs-command'
 {% if database is defined and enum.dbAdapters.TYPEORM in database %}
 import { TypeOrmModule } from '@nestjs/typeorm'
 {% elif database is defined and enum.dbAdapters.MONGOOSE in database %}
 import { MongooseModule } from '@nestjs/mongoose'
 {% endif %}
 
+{% if database is defined and database != enum.database.NONE %}
+import { getDatabaseOptions } from '../util/database'
+{% endif %}
 import {
   ConfigService,
   {% if enum.components.MICROSERVICE_CLIENT in components %}
@@ -23,6 +26,9 @@ export function createCommandModule ({% if database is defined and database != e
 @Module({
   providers: [
     ConfigService,
+    ...Object.values(modules)
+    ],
+  imports: [
     {% if database is defined and enum.dbAdapters.TYPEORM in database %}
     TypeOrmModule.forRoot(getDatabaseOptions(mock)),
     {% elif database is defined and enum.dbAdapters.MONGOOSE in database %}
@@ -30,10 +36,9 @@ export function createCommandModule ({% if database is defined and database != e
     {% endif %}
     {% if enum.components.MICROSERVICE_CLIENT in components %}
     MicroserviceProviderModule.forRoot({ queue: [ {% for client in microserviceClient %}MessageQueues.{{ microserviceCasing[client].names.queue }}{% endfor %} ] }),
-    {% endif %},
-    ...Object.values(modules)
-    ],
-  imports: [ CommandModule ]
+    {% endif %}
+    BaseCommandModule
+    ]
 })
   class CommandModule implements NestModule {
     // eslint-disable-next-line @typescript-eslint/no-empty-function
