--- a/packages/nx-nest/src/schematics/microservice-provider/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/README.md.j2
@@ -4,17 +4,20 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ---
 
-# {{ packageScope}}
+# @{{ packageScope}}/{{ packageName }}
 
 ## Description
 
-This is a auto-generated custom workspace with [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
+This is a auto-generated custom library for microservice clients for [@nrwl/nx](https://www.npmjs.com/package/@nrwl/nx).
 
 <!-- toc -->
 <!-- tocstop -->
 
 ---
 
+# Usage
+
+Please refer to microservice-client section of [@webundsoehne/nestjs-util](https://www.npmjs.com/package/@webundsoehne/nestjs-util#microservice-client-provider).
 
 ---
 
