fix: change lock mechanism

--- a/packages/brownie/templates/containers/db-mongodb/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/db-mongodb/docker-compose.yml.j2
@@ -1,5 +1,5 @@
 services:
-  db-mongodb:
+  {{ name }}:
     {% filter indent(4, true) %}
       {% set image = 'mongo:latest' %}
       {% include '../../base/image.yml.j2' %}
