--- a/packages/brownie/templates/containers/db-mysql/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/db-mysql/docker-compose.yml.j2
@@ -1,5 +1,5 @@
 services:
-  db-mysql:
+  {{ name }}:
     {% filter indent(4, true) %}
       {% set image = 'mysql:latest' %}
       {% include '../../base/image.yml.j2' %}
