--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -48,7 +48,7 @@ database:
   cache: false
   keepConnectionAlive: true
   mock:
-    database: db
+    database: db_mock
   directories:
     entity: ./**/*.entity{.ts,.js}
     migration: migrations
@@ -58,7 +58,7 @@ database:
   username: user
   password: secret
   mock:
-    database: db-mock
+    database: db_mock
   ignoreUndefined: true
   useNewUrlParser: true
   useUnifiedTopology: true
