--- a/packages/brownie/templates/containers/rabbitmq/docker-compose.yml.j2
+++ b/packages/brownie/templates/containers/rabbitmq/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 services:
   {{ name }}:
     {% filter indent(4, true) %}
-      {% set image = 'rabbitmq:3-management-alpine:latest' %}
+      {% set image = 'rabbitmq:3-management-alpine' %}
       {% include '../../base/image.yml.j2' %}
     {% endfilter %}
 
