fix: update linting setup for generated package, add missing type

--- a/packages/nx-nest/src/schematics/application/files/src/util/database__typeorm__.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/util/database__typeorm__.ts.j2
@@ -1,4 +1,5 @@
 import { ConfigService } from '@webundsoehne/nestjs-util'
+import { ConnectionOptions } from 'typeorm'
 
 const { mock: mockOptions = {}, directories, ...options } = ConfigService.get('database')
 
@@ -14,6 +15,6 @@ const databaseOptions = {
   factories: [ `./${directories.seed}/**/*.factory{.ts,.js}` ]
 }
 
-export function getDatabaseOptions (mock = false) {
+export function getDatabaseOptions (mock = false): ConnectionOptions {
   return mock ? { ...databaseOptions, ...mockOptions } : databaseOptions
 }
