--- a/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/.eslintrc.json.j2
@@ -1,6 +1,9 @@
 {
   "root": true,
   "plugins": ["@nrwl/nx"],
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "extends": ["@webundsoehne/eslint-config/index", "@webundsoehne/eslint-config/typescript"],
   "rules": {
     "import/order": [
