fix: brownie fixed falling back to npm, set npm as default

--- a/packages/nx-nest/src/schematics/application/files/README.md.j2
+++ b/packages/nx-nest/src/schematics/application/files/README.md.j2
@@ -4,7 +4,7 @@ Web & Söhne is Austrian's leading expert in programming and implementing comple
 
 ---
 
-# @{{ packageScope}}/{{ packageName }}
+# {{ packageName }}
 
 ## Description
 
