fix: fix typescript enum indexing problem possibly?
The issue with enum and why it goes crazy is still a mystery but it might be related to
similar mentioned issues like https://github.com/Microsoft/TypeScript/issues/21987.

So I hard typed all the interfaces for message queues and such to give a try on austria-codex.

--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
@@ -1,11 +1,11 @@
 {# Since this is a multiple jinja template this uses only the 'microservice' part of the variables. #}
-import { MicroserviceProviderBaseMessage } from '@webundsoehne/nestjs-util/dist/microservices'
 import { {{ names.pattern }} } from '../patterns'
+import { MicroserviceProviderBaseMessage, BaseMessageIndexes } from '@webundsoehne/nestjs-util/dist/microservices'
 
 /**
  * Request-response patterns for all message patterns of "{{ name }}" with pattern "{{ names.pattern }}"
  */
-export declare class {{ names.interface }} implements MicroserviceProviderBaseMessage<typeof {{ names.pattern }}> {
+export declare class {{ names.interface }} extends BaseMessageIndexes implements MicroserviceProviderBaseMessage<{{ names.pattern }}> {
   [{{ names.pattern }}.{{ names.default }}]: {
     response: any | never
     request: any | never
