fix: minor fixes to templating, schematics and add the option to only inject microservice provider

--- a/packages/nx-nest/src/schematics/application/files/src/command/command.module.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/command/command.module.ts.j2
@@ -10,11 +10,11 @@ import { MongooseModule } from '@nestjs/mongoose'
 import { getDatabaseOptions } from '../util/database'
 {% endif %}
 import {
-  ConfigService,
-  {% if enum.components.MICROSERVICE_CLIENT in components %}
-  MicroserviceProviderModule,
-  {% endif %}
+  ConfigService
 } from '@webundsoehne/nestjs-util'
+{% if enum.components.MICROSERVICE_CLIENT in components %}
+import { MicroserviceProviderModule } from '@webundsoehne/nestjs-util/dist/microservices'
+{% endif %}
 
 import * as modules from './modules'
 
