feat: updated component generation
- Updated graphql component generation to have input, output and
  service.
- Graphql components get generated in resolvers folder now.
- Enabled to generate restful and graphql components independent of
  server type.
- updated prior configuration check while generating default components
- renamed bg_task to bgtask
- enabled server mode on bg task

--- a/packages/nx-nest/src/schematics/application/files/src/constants.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/constants.ts.j2
@@ -7,7 +7,7 @@ export enum Service {
   MICROSERVICE_SERVER = 'microservice_server',
   {% endif %}
   {% if enum.components.BG_TASK in components %}
-  TASK = 'bg_task',
+  TASK = 'bgtask',
   {% endif %}
   {% if enum.components.COMMAND in components %}
   COMMAND = 'cli'
