--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.output.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.output.ts.j2
@@ -2,6 +2,6 @@ import { Field, ObjectType } from '@nestjs/graphql'
 
 @ObjectType()
 export class {{ casing.pascal }}Schema {
-  @Field({ nullable: true })
-  response: string
+  @Field(() => String, { nullable: true })
+  response?: string
 }
