fix: update the msp schematic

--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/interfaces/__interface__.interface.ts.j2
@@ -7,7 +7,7 @@ import { MicroserviceProviderBaseMessage, BaseMessageIndexes } from '@webundsoeh
  */
 export declare class {{ names.interface }} extends BaseMessageIndexes implements MicroserviceProviderBaseMessage<{{ names.pattern }}> {
   [{{ names.pattern }}.{{ names.default }}]: {
-    response: any | never
-    request: any | never
+    request: any
+    response: any
   }
 }
