--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.module.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.module.ts.j2
@@ -1,8 +1,9 @@
 import { Module } from '@nestjs/common'
 
 import { {{ casing.pascal }}Resolver } from './{{ name }}.resolver'
+import { {{ casing.pascal }}Service } from './{{ name }}.service'
 
 @Module({
-  providers: [ {{ casing.pascal }}Resolver ]
+  providers: [ {{ casing.pascal }}Resolver, {{ casing.pascal }}Service ]
 })
 export class {{ casing.pascal }}Module {}
