--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.output.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.output.ts.j2
@@ -1,7 +1,7 @@
 import { Field, ObjectType } from '@nestjs/graphql'
 
 @ObjectType()
-export class {{ casing.pascal }}Schema {
+export class {{ casing.pascal }}Output {
   @Field(() => String, { nullable: true })
   response?: string
 }
