--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -19,13 +19,13 @@
     "test:one": "{{ cliCmd }} test",
     "test:e2e": "{{ cliCmd }} run-many --target=e2e --parallel --maxParallel=1000 --all",
     "lint": "{{ cliCmd }} format:write --all && nx workspace-lint && yarn lint:check --fix",
-    "lint:check": "{{ cliCmd }} run-many --parallel --target=lint --all --",
+    "lint:check": "{{ cliCmd }} run-many --parallel --maxParallel=5 --target=lint --all --",
     "affected": "nx affected",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
     "affected:test": "nx affected:test",
-    "affected:lint": "nx format:write && nx affected:lint --parallel --all --fix",
+    "affected:lint": "nx format:write --base=$(git branch --show-current) && nx affected:lint --parallel --maxParallel=5 --fix --base=$(git branch --show-current) --skip-nx-cache",
     "affected:dep-graph": "nx affected:dep-graph",
     {% if cli == enum.cli.ANGULAR %}
     "update": "ng update @nrwl/workspace",
