--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.service.ts.j2
@@ -7,6 +7,8 @@ import { {{ casing.pascal }}Output } from './{{ name }}.output'
 export class {{ casing.pascal }}Service {
   private logger: Logger = new Logger(this.constructor.name)
 
+  constructor () {}
+
   public async default (args: {{ casing.pascal }}Input): Promise<{{ casing.pascal }}Output> {
     return { response: `Hello ${args?.name}.` }
   }
