--- a/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.controller.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.controller.ts.j2
@@ -11,7 +11,7 @@ export class {{ casing.pascal }}Controller {
   @ApiOperation({ summary: '{{ casing.pascal }}', description: 'Route auto-generated for {{ casing.pascal }}' })
   @ApiResponse({ status: 200, description: '{{ casing.pascal }} route' })
   @Get()
-  public default (): string {
+  public default (): Promise<string> {
     return this.{{ casing.camel }}Service.default()
   }
 }
