--- a/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
@@ -4,7 +4,9 @@ import { Injectable, Logger } from '@nestjs/common'
 export class {{ casing.pascal }}Service {
   private logger: Logger = new Logger(this.constructor.name)
 
-  public default (): string {
+  constructor () {}
+
+  public async default (): Promise<string> {
     return 'Hello World!'
   }
 }
