fix: fix import to provider in command component

--- a/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.module.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/command/__default__/__default__.module.ts.j2
@@ -3,7 +3,7 @@ import { Module } from '@nestjs/common'
 import { {{ casing.pascal }}Command } from './{{ name }}.command'
 
 @Module({
-  imports: [ {{ casing.pascal }}Command ],
+  providers: [ {{ casing.pascal }}Command ],
   exports: [ {{ casing.pascal }}Command ]
 })
 export class {{ casing.pascal }}CommandModule {}
